--- a/content/posts/2019-03-28-c2e2.md
+++ b/content/posts/2019-03-28-c2e2.md
@@ -4,6 +4,7 @@ date: '2019-03-28T09:00:00.000-05:00'
 description: Thoughts and photos from C2E2 2019.
 headerimage: /images/headers/c2e2_floor.jpg
 image: /images/blog/2019-c2e2-banner.jpg
+images: ["/images/blog/2019-c2e2-banner.jpg"]
 modified_time: '2019-03-28T09:00:00.000-05:00'
 tags:
   - C2E2
