Duplicated front matter data for image to also have images for Facebook Open Graph and Twitter Cards.

--- a/content/posts/2015-08-10-armada.md
+++ b/content/posts/2015-08-10-armada.md
@@ -3,6 +3,7 @@ author: Steven Suwatanapongched
 date: '2015-08-10T09:00:00.000-05:00'
 description: I give a spoiler free review of Ernest Cline's new book, Armada.
 image: /images/blog/armada.jpg
+images: ["/images/blog/armada.jpg"]
 modified_time: '2015-08-10T09:00:00.000-05:00'
 tags:
   - Books
