--- a/content/posts/2016-03-22-c2e2-2016.md
+++ b/content/posts/2016-03-22-c2e2-2016.md
@@ -4,6 +4,7 @@ date: '2016-03-22T10:00:00.000-05:00'
 description: My three days at Chicago's C2E2 2016.
 headerimage: /images/headers/c2e2_logo.jpg
 image: /images/blog/2016-c2e2.jpg
+images: ["/images/blog/2016-c2e2.jpg"]
 modified_time: '2016-03-22T11:41:07.822-05:00'
 tags:
   - C2E2
