--- a/content/posts/2017-03-15-logan.md
+++ b/content/posts/2017-03-15-logan.md
@@ -4,6 +4,7 @@ date: '2017-03-15T09:00:00.000-05:00'
 description: My quick spoilery review of Logan. In short, it's a good movie, but very disconnected from current X-Men movie universe.
 headerimage: /images/headers/logan.jpg
 image: /images/blog/logan.jpg
+images: ["/images/blog/logan.jpg"]
 modified_time: '2017-03-15T09:00:00.000-05:00'
 tags:
   - Comics
