--- a/content/posts/2018-05-21-deadpool-2.md
+++ b/content/posts/2018-05-21-deadpool-2.md
@@ -4,6 +4,7 @@ date: '2018-05-21T09:00:00.000-05:00'
 description: My review of the Deadpool 2 movie.
 headerimage: /images/headers/deadpool-2-bullets.jpg
 image: /images/blog/deadpool-2.jpg
+images: ["/images/blog/deadpool-2.jpg"]
 modified_time: '2018-05-21T09:00:00.000-05:00'
 tags:
   - Movies
