--- a/content/posts/2018-07-12-anime-expo-2018.md
+++ b/content/posts/2018-07-12-anime-expo-2018.md
@@ -4,6 +4,7 @@ date: '2018-07-12T09:00:00.000-05:00'
 description: My photos taken at Anime Expo 2018.
 headerimage: /images/headers/anime_expo.jpg
 image: /images/blog/2018-anime-expo.jpg
+images: ["/images/blog/2018-anime-expo.jpg"]
 modified_time: '2018-07-12T09:00:00.000-05:00'
 tags:
   - Anime Expo
