--- a/content/posts/2015-07-06-anime-expo-2015.md
+++ b/content/posts/2015-07-06-anime-expo-2015.md
@@ -4,6 +4,7 @@ date: '2015-07-06T09:00:00.000-05:00'
 description: My post covering my trip to Anime Expo, July 1-5, 2015.
 headerimage: /images/headers/anime_expo.jpg
 image: /images/blog/2015_anime_expo.jpg
+images: ["/images/blog/2015_anime_expo.jpg"]
 modified_time: '2015-05-25T09:00:00.000-05:00'
 tags:
   - Anime Expo
