--- a/content/posts/2017-04-26-c2e2.md
+++ b/content/posts/2017-04-26-c2e2.md
@@ -4,6 +4,7 @@ date: '2017-04-26T09:00:00.000-05:00'
 description: Photos and thoughts on Chicago's C2E2, April 21-23, 2017.
 headerimage: /images/headers/c2e2-sign.jpg
 image: /images/blog/2017-c2e2-collage.jpg
+images: ["/images/blog/2017-c2e2-collage.jpg"]
 modified_time: '2017-04-26T09:00:00.000-05:00'
 tags:
   - C2E2
