--- a/content/posts/2018-02-01-movies-of-2018.md
+++ b/content/posts/2018-02-01-movies-of-2018.md
@@ -4,6 +4,7 @@ date: '2018-02-01T09:00:00.000-05:00'
 description: The movies I plan to watch in 2018.
 headerimage: /images/headers/2018-movies.jpg
 image: /images/blog/2018-movies.jpg
+images: ["/images/blog/2018-movies.jpg"]
 modified_time: '2018-01-12T09:00:00.000-05:00'
 tags:
   - Comics
