--- a/content/posts/2018-04-11-c2e2.md
+++ b/content/posts/2018-04-11-c2e2.md
@@ -4,6 +4,7 @@ date: '2018-04-11T09:00:00.000-05:00'
 description: Photos and thoughts on Chicago's C2E2, April 6-8, 2018.
 headerimage: /images/headers/c2e2-sign.jpg
 image: /images/blog/2018-c2e2-entrance.jpg
+images: ["/images/blog/2018-c2e2-entrance.jpg"]
 modified_time: '2018-04-11T09:00:00.000-05:00'
 tags:
   - C2E2
