Updated draft post on M1 Finance.

--- a/content/posts/2019-10-18-m1-finance.md
+++ b/content/posts/2019-10-18-m1-finance.md
@@ -11,38 +11,63 @@ images: ["/images/blog/m1-finance-invest-desktop.jpg"]
 thumbnail: "/images/blog/tn_m1-finance-invest-desktop.jpg"
 ---
 
-Lately I've been spending a lot of time reading books and watching youTube videos on investing. For years I've heard a lot about the [Robinhood](https://robinhood.com/) and [Acorns](https://www.acorns.com/) apps, but there was nothing about them that made me want to try them out or move from my traditional brokerages. It's great that they have mobile apps and free trades for young investors and beginners, but I'd rather do my investments carefully on the desktop browser.
+Lately I've been spending a lot of time reading books and watching youTube videos on investing. For years I've heard a lot about the [Robinhood](https://robinhood.com/) and [Acorns](https://www.acorns.com/) apps, but there was nothing about them that made me want to try them out or move away from my traditional brokerages. It's great that they have mobile apps and free trades for young investors and beginners, but I'd rather do my investments carefully on the desktop browser.
 
 Soon enough I came across videos and blog posts recommending [M1 Finance](https://mbsy.co/wzGMJ). What stood out was that it allowed for custom pies, free trades, partial shares, and autoinvesting.
 
+This blog post is about [M1 Finance Invest](https://www.m1finance.com/how-it-works/invest/). There are other services from M1 such as [Borrow](https://www.m1finance.com/how-it-works/borrow/) and [Spend](https://www.m1finance.com/how-it-works/spend/). But I have no plans or interest to use them. 
+
 ![M1 Finance Invest](/images/blog/m1-finance-invest-mobile.jpg)
 
-I really like looking at my portfolio as a pie.
+I really like looking at my portfolio as a pie. I think it's important to have a portfolio that is diversified across sectors to spread risk as well as reap rewards. Too many brokerages default to a table view and leaves you hanging on how to balance your portfolio.
 
-![M1 Finance Desktop Screens](/images/blog/m1-finance-desktop-screens.jpg)
+Another really nice touch is having the company's logo/icon with each stock/ETF.
 
-## Pros
+![M1 Finance Portfolio Pies](/images/blog/m1-finance-portfolio-pie--stocks.jpg)
+
+When building and researching your portfolio, you can add stocks/ETFs directly into it. Or you can create a custom pie to add them into, then add pies to your portfolio. I think most people, including myself, organize these custom pies by sectors.
+
+There is simplicity with the "Expert Pies" section, where you can pick from allocated pies based on what your goals and strategies are. They're nice, but I like things to be even more simple when constructing a portfolio, so I prefer to look at [Boglehead's Lazy Portfolios](https://www.bogleheads.org/wiki/Lazy_portfolios).
+
+![M1 Finance Expert Pies](/images/blog/m1-finance-expert-pies.jpg)
+
+Here's my breakdown of the Pros/Cons of using M1 Finance:
+
+#### Pros
 * You can buy partial shares.
 * You can create individual, joint, and retirement accounts.
-* Autoinvest feature
+* Autoinvest feature (Great for DRIP-- dividend reinvestment plan)
 * Schedule deposits into account(s).
 * Every penny can be put to work.
 * Create custom pies.
 * Pies that auto balance as you keep funding it.
 * Create your own custom ETF!
 
-## Cons
+#### Cons
 * Not for day traders
 * Not for buying individual stocks/ETFs
 * No Mutual funds.
 * Only one trading window per day, in the morning before lunch.
 * You buy *market price* of selected stock/ETFs.
 
+Say you want to own a piece of Amazon. Their stock is currently trading in the $1700-1800 range. For most people, that's a lot of money for a single share. With partial shares you can own Amazon stock, but just a fraction of it.
+
+A lot of people think they can time the market, they they can buy at low and sell at high. Time in the market is better than trying to time the market. It's a better overall strategy to regularly fund your portfolio now, than to wait hoping that you will hop in at the right time with the right investments. No one really knows the future.
+
+
+## Robinhood and Acorns
+
+If you prefer to buy individual stocks in full, then [Robinhood](https://robinhood.com/) is probably more for you.
+
+I just don't like Acorns investing strategy. It seems too basic for people who want to get started in investing, but only want to do so with their spare change by rounding up purchases. To me that's not a strategy. Maybe some months it's a lot of coins, other months maybe very little to none. And on top of that they have a $1 per month fee for accounts under $1 million, which would be most users. So say your rounds ups amounts to $10 per month. The Acorn fee would be 10%. That's terrible!
+
 ## My Portfolios
 
 Here are two portfolios I have set up with M1 Finance:
 
-[Core 4 ETFs](https://m1.finance/a9qiZN9wE) - Based off of Rick Ferri's core four fund "cornerstone" portfolio (80/20). The Aggressive Growth portfolio has an allocation of 80% in equity and 20% in fixed income.
+### [Core 4 ETFs](https://m1.finance/a9qiZN9wE)
+
+Based off of [Rick Ferri's](https://rickferri.com/) core four fund "cornerstone" portfolio (80/20). The Aggressive Growth portfolio has an allocation of 80% in equity and 20% in fixed income.
 
 | ETF   | Symbol   | Percentage   |
 |---  |---: |---:|
@@ -51,33 +76,49 @@ Here are two portfolios I have set up with M1 Finance:
 |Vanguard Total Bond Market   |BND   |20%   |
 |Vanguard REIT   |VNQ   |8%   |
 
-[Passive Income](https://m1.finance/rnRO6nTW7) - Based off of [Joseph Carlson's](https://www.youtube.com/channel/UCbta0n8i6Rljh0obO7HzG9A) passive income pie, which is a dividend focused strategy in building wealth.
+See [Classic Corre-4 Portfolio Allocations](https://core-4.com/classic-core-4-portfolio-allocations/).
+
+The strategy isn't to find the needle in the haystack, just buy the haystack. As the total market grows, so does this portfolio. 
+
+### [Passive Income](https://m1.finance/rnRO6nTW7)
+
+Based off of [Joseph Carlson's](https://www.youtube.com/channel/UCbta0n8i6Rljh0obO7HzG9A) passive income pie, which is a dividend focused strategy in building wealth. It resembles a snowball effect where the monthly or quarterly dividends gets reinvested into the portfolio so you own more and more shares that pays dividends. The snowball gets bigger and bigger.
+
+Later on in life, after the portfolio grows to a large snowball, you may opt to have the dividends to pay your monthly bills or send you cash rather than be reinvested.
 
 *Disclaimer, these portfolios are what I think fits my needs. Your goals and situation(s) will be different from mine, so be sure to do your own research when you invest your  money!*
 
-## Resources
+## Final Thoughts
+
+M1 Finance is a great brokerage for those looking to do long term investing. You just need to design the portfolio pie allocation you want, then set a schedule or fund the portfolio when you can from your bank account.
+
+### Resources
 
 Here are some resources for your reading and research.
 
-### Books on Investing
+#### Books on Investing
 
-* [The Intelligent Investor](https://amzn.to/2mDkFzi) by Benjaman Graham
+* [The Intelligent Investor](https://amzn.to/2mDkFzi) by Benjamin Graham
 * [The Little Book on Common Sense Investing: The Only way to Guarantee Your Fair Share of Stock Market Returns](https://amzn.to/2nstOuC) by John C. Bogle
 * [Becoming an Investor: Building Wealth by Investing in Stocks, Bonds, and Mutual Funds](https://amzn.to/2mGyLjg) by Peter I. Hupalo
 
-### Websites
+#### Essential Websites
 
-* [Arc Invest](https://ark-invest.com/)
-* [Bogleheads.org](https://www.bogleheads.org/) - See [Lazy Portfolios](https://www.bogleheads.org/wiki/Lazy_portfolios)
-* [HyperCharts.co](https://hypercharts.co/)
-* [Seeking Alpha](https://seekingalpha.com/)
-* [Stocktwits](https://stocktwits.com/)
-* [Yahoo Finance](https://finance.yahoo.com/)
+* [Seeking Alpha](https://seekingalpha.com/) - Financial analysis, news, custom portfolio watchlists, and 
+* [Stocktwits](https://stocktwits.com/) - Custom watchlists and read the market chatter-- often a lot of noise.
+* [Yahoo Finance](https://finance.yahoo.com/) - Import your portfolio(s) and get real time updates.
 
-## Promotion
+#### More Websites
+
+* [Arc Invest](https://ark-invest.com/) - Let's talk about the future.
+* [Bogleheads.org](https://www.bogleheads.org/) - Investing Advice Inspired by Jack Bogle. Also see [Lazy Portfolios](https://www.bogleheads.org/wiki/Lazy_portfolios).
+* [ETF Research Center](https://www.etfrc.com/funds/overlap.php) - Compare 2 ETFs to see what overlaps.
+* [HyperCharts.co](https://hypercharts.co/) - Galileo Russell's (Hyperchange) project/service focused on disruptive companies.
+
+## Referral and Promotion
 
 If you liked my blog post and want to open and M1 Finance account, please use the referral code below as there is an ongoing promotion. The current promotion is give $10, get $10. When you sign up and fund your account, we both get $10!
 
-Referral code: [https://mbsy.co/wzGMJ](https://mbsy.co/wzGMJ)
+Referral: [https://mbsy.co/wzGMJ](https://mbsy.co/wzGMJ)
 
 Be sure to sign up on the website through the link above.
