--- a/content/posts/2019-10-18-m1-finance.md
+++ b/content/posts/2019-10-18-m1-finance.md
@@ -11,7 +11,7 @@ images: ["/images/blog/m1-finance-invest-desktop.jpg"]
 thumbnail: "/images/blog/tn_m1-finance-invest-desktop.jpg"
 ---
 
-Lately I've been spending a lot of time reading books and watching youTube videos on investing. For years I've heard a lot about the [Robinhood](https://robinhood.com/) and [Acorns](https://www.acorns.com/) apps, but there was nothing about them that made me want to try them out or move away from my traditional brokerages. It's great that they have mobile apps and free trades for young investors and beginners, but I'd rather do my investments carefully on the desktop browser.
+Lately I've been spending a lot of time reading books and watching youTube videos on investing. For years I've heard a lot about the [Robinhood](https://robinhood.com/) and [Acorns](https://www.acorns.com/) apps, but there was nothing about them that made me want to try them out, or move away from my traditional brokerages. It's great that they have mobile apps and free trades for young investors and beginners, but I'd rather do my investments carefully on the desktop browser.
 
 Soon enough I came across videos and blog posts recommending [M1 Finance](https://mbsy.co/wzGMJ). What stood out was that it allowed for custom pies, free trades, partial shares, and autoinvesting.
 
@@ -21,7 +21,7 @@ This blog post is about [M1 Finance Invest](https://www.m1finance.com/how-it-wor
 
 I really like looking at my portfolio as a pie. I think it's important to have a portfolio that is diversified across sectors to spread risk as well as reap rewards. Too many brokerages default to a table view and leaves you hanging on how to balance your portfolio.
 
-Another really nice touch is having the company's logo/icon with each stock/ETF.
+Another really nice touch is having the company's icon with each stock/ETF. Design-wise, it's easier to identify companies by their logo than reading text.
 
 ![M1 Finance Portfolio Pies](/images/blog/m1-finance-portfolio-pie--stocks.jpg)
 
@@ -34,7 +34,7 @@ There is simplicity with the "Expert Pies" section, where you can pick from allo
 Here's my breakdown of the Pros/Cons of using M1 Finance:
 
 #### Pros
-* You can buy partial shares.
+* You can buy partial/fractional shares.
 * You can create individual, joint, and retirement accounts.
 * Autoinvest feature (Great for DRIP-- dividend reinvestment plan)
 * Schedule deposits into account(s).
@@ -52,14 +52,24 @@ Here's my breakdown of the Pros/Cons of using M1 Finance:
 
 Say you want to own a piece of Amazon. Their stock is currently trading in the $1700-1800 range. For most people, that's a lot of money for a single share. With partial shares you can own Amazon stock, but just a fraction of it.
 
-A lot of people think they can time the market, they they can buy at low and sell at high. Time in the market is better than trying to time the market. It's a better overall strategy to regularly fund your portfolio now, than to wait hoping that you will hop in at the right time with the right investments. No one really knows the future.
+A lot of people think they can time the market, they they can buy at low and sell at high. **Time in the market is better than trying to time the market.** It's a better overall strategy to regularly fund your portfolio now, than to wait hoping that you will hop in at the right time with the right investments. No one really knows the future.
 
 
-## Robinhood and Acorns
+## New vs Old Brokerages
+
+M1 Finance, Robinhood, Acorns, and WeBull represent the new brokerages, aimed at millennials and young people. They seem to be mobile first with beautiful and simple design on all screen sizes. I really like the disruption they bring, as a lot of brokerages have dropped their commission fees.
 
 If you prefer to buy individual stocks in full, then [Robinhood](https://robinhood.com/) is probably more for you.
 
-I just don't like Acorns investing strategy. It seems too basic for people who want to get started in investing, but only want to do so with their spare change by rounding up purchases. To me that's not a strategy. Maybe some months it's a lot of coins, other months maybe very little to none. And on top of that they have a $1 per month fee for accounts under $1 million, which would be most users. So say your rounds ups amounts to $10 per month. The Acorn fee would be 10%. That's terrible!
+I just don't like [Acorns](https://www.acorns.com/) investing strategy. It seems too basic for people who want to get started in investing, but only want to do so with their spare change by rounding up purchases. To me that's not a strategy. Maybe some months it's a lot of coins, other months maybe very little to none. And on top of that they have a $1 per month fee for accounts under $1 million, which would be most users. So say your rounds ups amounts to $10 per month. The Acorn fee would be 10%. That's terrible!
+
+I haven't really looked into [WeBull](https://www.webull.com/) yet.
+
+I am often frustrated with the "old" or more traditional brokerages like [Vanguard](https://vanguard.com) and [Fidelity](https://www.fidelity.com/). Navigating and using their website on the desktop browser is just awful. I have to click too many links too many times just to see the data I want. Their mobile apps are also poorly designed. Maybe the one clear advantage they have is they may have a physical location you can visit in person near you. And probably better customer support.
+
+![M1 Finance Mobile app](/images/blog/m1-finance-mobile-invest.jpg)
+
+
 
 ## My Portfolios
 
@@ -76,7 +86,7 @@ Based off of [Rick Ferri's](https://rickferri.com/) core four fund "cornerstone"
 |Vanguard Total Bond Market   |BND   |20%   |
 |Vanguard REIT   |VNQ   |8%   |
 
-See [Classic Corre-4 Portfolio Allocations](https://core-4.com/classic-core-4-portfolio-allocations/).
+See [Classic Core-4 Portfolio Allocations](https://core-4.com/classic-core-4-portfolio-allocations/).
 
 The strategy isn't to find the needle in the haystack, just buy the haystack. As the total market grows, so does this portfolio. 
 
@@ -84,13 +94,23 @@ The strategy isn't to find the needle in the haystack, just buy the haystack. As
 
 Based off of [Joseph Carlson's](https://www.youtube.com/channel/UCbta0n8i6Rljh0obO7HzG9A) passive income pie, which is a dividend focused strategy in building wealth. It resembles a snowball effect where the monthly or quarterly dividends gets reinvested into the portfolio so you own more and more shares that pays dividends. The snowball gets bigger and bigger.
 
-Later on in life, after the portfolio grows to a large snowball, you may opt to have the dividends to pay your monthly bills or send you cash rather than be reinvested.
+Later on in life, after the portfolio grows to a large snowball, you may opt to have the dividends to pay your monthly bills or send you checks rather than be reinvested.
+
+This is also a portfolio that I will make small tweaks to over time. For example, I may increase or decrease the Consumer Defense sector by a few percentage points to make room for changes in another sector. No rebalance needed, as future deposits will fund sectors where need be.
 
 *Disclaimer, these portfolios are what I think fits my needs. Your goals and situation(s) will be different from mine, so be sure to do your own research when you invest your  money!*
 
 ## Final Thoughts
 
-M1 Finance is a great brokerage for those looking to do long term investing. You just need to design the portfolio pie allocation you want, then set a schedule or fund the portfolio when you can from your bank account.
+![M1 Finance Logo](/images/blog/m1-finance-logo.jpg)
+
+M1 Finance is a great brokerage for those looking to do long term investing. You just need to design the portfolio pie allocations you want, then set a schedule or fund the portfolio when you can from your bank account. And that's it. Set it and don't fret about rebalancing unless you sell shares, which shouldn't happen often at all.
+
+For long term investors, the buy and hold for years type, the market price you pay is just fine. It's not about trying to buy at the low for the day, month, or year. The strategy is to keep funding the account and getting those averages in basically. In 20 or 30 years from now, it won't really matter if you bought at the absolute lowest.
+
+If traditional brokerages start offering partial shares and better UI in desktop/moble, then M1 would maybe be in trouble. But I don't see that happening any time soon. I can see them improving their checkings account and eventually offering a credit card. Maybe even do what Acorns has with an option to round up charges to nearest full dollar so you can have another small stream of cash for investing!
+
+But for now, I'm really happy using M1 Finance.
 
 ### Resources
 
