--- a/content/posts/2019-10-17-m1-finance.md
+++ b/content/posts/2019-10-17-m1-finance.md
@@ -106,9 +106,9 @@ M1 Finance is a great brokerage for those looking to do long term investing. You
 
 For long term investors, the buy and hold for years type, the market price you pay is just fine. It's not about trying to buy at the low for the day, month, or year. The strategy is to keep funding the account and getting those averages in basically. Twenty or thirty years from now, it won't really matter if you bought at the absolute lowest. What's important is that your money i
 
-If traditional brokerages start offering partial shares and better UI in desktop/moble, then M1 would maybe be in trouble. But I don't see that happening any time soon. I can see them improving their checkings account and eventually offering a credit card. Maybe even do what Acorns has with an option to round up charges to nearest full dollar so you can have another small stream of cash for investing!
+If traditional brokerages start offering partial shares and better UI in desktop/moble, then M1 would maybe be in trouble. But I don't see that happening any time soon. I can see M1 improving their checkings account and eventually offering a credit card. Maybe even do what Acorns has with an option to round up charges to nearest full dollar so you can have another small stream of cash for investing!
 
-For now, I'm really happy using M1 Finance.
+For now, I'm really happy using M1 Finance. But I also wouldn't be surpised if they get bought out in the coming year.
 
 ![M1 Finance Logo](/images/blog/m1-finance-logo.jpg)
 
