Added button referral link.

--- a/content/posts/2019-10-17-m1-finance.md
+++ b/content/posts/2019-10-17-m1-finance.md
@@ -140,6 +140,8 @@ Here are some resources for your reading and research.
 
 If you liked my blog post and want to open and M1 Finance account, please use the referral code below as there is an ongoing promotion. The current promotion is give $10, get $10. When you sign up and fund your account, we both get $10!
 
+<a style="text-decoration: none;" class="btn btn-secondary" href="https://mbsy.co/wzGMJ" role="button">Open an M1 account</a>
+
 Referral: [https://mbsy.co/wzGMJ](https://mbsy.co/wzGMJ)
 
 Be sure to sign up on the website through the link above.
