--- a/content/posts/2020-03-05-c2e2.md
+++ b/content/posts/2020-03-05-c2e2.md
@@ -17,11 +17,28 @@ title: C2E2 2020
 
 Last weekend was [C2E2](https://www.c2e2.com/) in Chicago. I went all three days this year and spent most of the time in the main stage room for panels. I was barely on the show floor taking cosplayer's photos, but I think I still got a decent amount.
 
+The show floor seems to have expanded the autograph/photo-op area, as well as more space for cosplay and eating/chillaxing. I think it's making great decision in creating a better experience for con goers than just a place to buy stuff.
+
 Something that's going on right now is the [Coronavirus Diseseas (COVID-19)](https://www.cdc.gov/coronavirus/2019-ncov/index.html). The [McCormick Place convention center](https://www.mccormickplace.com/) had hand sanitizer everywhere, as they normally do. One thing I just don't get about bathrooms in general is that after you wash your hands, often the doors open inwards, so you would have to open the door with your hands! I wish there was a better way.
+
+## Photo Albums
+
+If you want to skip reading this blog post and just check out the photos I took, here are the links:
+
+* [Sunpech Photography - C2E2 2020 album](https://www.sunpechphotography.com/Conventions/2020-C2E2)
+* [Facebook - 2020 C2E2 - George Takei](https://www.facebook.com/pg/SunpechPhotography/photos/?tab=album&album_id=2871145202950485)
+* [Facebook - 2020 C2E2 - Jim Lee](https://www.facebook.com/pg/SunpechPhotography/photos/?tab=album&album_id=2871152056283133)
+* [Facebook - 2020 C2E2 - Adam Savage](https://www.facebook.com/pg/SunpechPhotography/photos/?tab=album&album_id=2871154362949569)
+* [Facebook - 2020 C2E2 - Stephen Amell and Emily Bett Rickards](https://www.facebook.com/pg/SunpechPhotography/photos/?tab=album&album_id=2871158909615781)
+* [Facebook - 2020 C2E2 - Umbrella Academy](https://www.facebook.com/pg/SunpechPhotography/photos/?tab=album&album_id=2871164002948605)
+* [Facebook - 2020 C2E2 - The Boys Cast](https://www.facebook.com/pg/SunpechPhotography/photos/?tab=album&album_id=2871170379614634)
+* [Facebook - 2020 C2E2 - Mark Ruffalo](https://www.facebook.com/pg/SunpechPhotography/photos/?tab=album&album_id=2871168072948198)
+* [Facebook - 2020 C2E2 - Crown Championship of Cosplay](https://www.facebook.com/pg/SunpechPhotography/photos/?tab=album&album_id=2871170379614634)
+* [Facebook - 2020 C2E2 - Cosplay](https://www.facebook.com/pg/SunpechPhotography/photos/?tab=album&album_id=2871243599607312)
 
 ## Photography
 
-For my photography, I didn't use my flash at all this year. I kept it simple with my Sony 55mm prime and Canon 70-200mm telephoto. I used the Sigma MC-11 adapter on my Canon telephoto, which for the most part was pretty good. I did notice that it struggled for autofocus when in portrait mode (vertical) at full length (150-200mm). So to counter this I would just shoot landscape (horizontal), which autofocus was fine-- still not as fast as on a Canon body, but still very good.
+For my photography, I didn't use my flash at all this year. I kept it simple with my [Sony 55mm](https://amzn.to/2vzwkDX) prime and Canon 70-200mm telephoto. I used the [Sigma MC-11 adapter](https://amzn.to/2TpoGoC) on my Canon telephoto, which for the most part was pretty good. I did notice that it struggled for autofocus when in portrait mode (vertical) at full length (150-200mm). So to counter this I would just shoot landscape (horizontal), which autofocus was fine-- still not as fast as on a Canon body, but still very good.
 
 I took a record 3,680 photos this year across all three days. I actually filled my 64GB SD card and had to wipe my backup card and swipe it into the main slot so I could continue taking photos during the cosplay competition.
 
@@ -61,12 +78,22 @@ I love going to the panels at C2E2. I think it may be the main reason I attend n
 
 ![Umbrella Academy](/images/blog/2020-c2e2-umbrella-academy.jpg)
 
-
+I'm a fan of Netflix's [Umbrella Academy](https://www.imdb.com/title/tt1312171/). I'm also a fan of [Robert Sheehan](https://www.imdb.com/name/nm1588066/). He's great on the show, but also check out [Misfits](https://www.imdb.com/title/tt1548850/), which is also a superhero show that has [Iwan Rheon](https://www.imdb.com/name/nm3701064/) and [Nathalie Emmanuel](https://www.imdb.com/name/nm2812026/) from Game of Thrones! [Emmy Raver-Lampman](https://www.imdb.com/name/nm8287501/) is amazing too, he smile just lights up the room!
 
 ![Mark Ruffalo](/images/blog/2020-c2e2-mark-ruffalo.jpg)
 
+The [Mark Ruffalo](https://www.imdb.com/name/nm0749263/) was early on Sunday morning, 10am. Yet fans lined up early to get into the room that filled to capacity almost right away.
+
 ![Stephen Amell](/images/blog/2020-c2e2-stephen-amell.jpg)
+
+I wasn't a regular viewer of the CW's Arrow show, but I do enjoy seeing [Stephen Amell](https://www.imdb.com/name/nm1854386/) at conventions. Amell and [Emily Bett Rickards](https://www.imdb.com/name/nm4703025/) have such chemistry on stage, you can really tell they are close friends. The panel was really fun and everyone was having a good time. I recall one young fan having comments to say about Amell's choice in socks.
 
 ![The Boys Cast](/images/blog/2020-c2e2-the-boys-cast.jpg)
 
+I'm a fan of Amazon's [The Boys](https://www.imdb.com/title/tt1190634/) TV show. I haven't read the comics, yet. On stage was [Karl Urban](https://www.imdb.com/name/nm0881631/), [Antony Starr](https://www.imdb.com/name/nm1102278/), [Erin Moriarty](https://www.imdb.com/name/nm3929195/), [Dominique McElligott](https://www.imdb.com/name/nm1069800/), and [Laz Alonso](https://www.imdb.com/name/nm0022306/). These guys have so many stories and pranks to share from on set. This was on of my favorite panels I attended at C2E2. And I have to say that Atony Starr the actor is so different from the Homelander character we see on the show!
+
 ## Final Thoughts
+
+If you are a Chicagoan or live in the midwest, C2E2 is a fantastic comic convention to attend. The cosplay, show floor, panels, guests are far above the average convention-- and year after year, they keep improving. It's not a huge convention like New York or San Diego Comic Con, but that's a good thing. It's more comforable to attend without the stress of crowds or crazy lines.
+
+One last tip. If you are an out of towner, stay at the Marriott Marquis instead of the Hyatt Regency. The former is more quiet place to stay, the latter an absolute zoo outside of the convention hours. Up to you in what kind of experience you want to have.
