Updated referral link to M1 Finance.

--- a/content/posts/2019-10-17-m1-finance.md
+++ b/content/posts/2019-10-17-m1-finance.md
@@ -13,7 +13,7 @@ thumbnail: "/images/blog/tn_m1-finance-invest-desktop.jpg"
 
 Lately I've been spending a lot of time reading books and watching youTube videos on investing. For years I've heard a lot about the [Robinhood](https://robinhood.com/) and [Acorns](https://www.acorns.com/) apps, but there was nothing about them that made me want to try them out, or move away from my traditional brokerages. It's great that they have mobile apps and free trades for young investors and beginners, but I'd rather manage my investments carefully on a desktop browser.
 
-Soon enough I came across videos and blog posts recommending [M1 Finance](https://mbsy.co/wzGMJ). What stood out was that it allowed for custom pies, free trades, partial shares, and autoinvesting. These are features
+Soon enough I came across videos and blog posts recommending [M1 Finance](https://m1.finance/WVxtGBcwdF5g). What stood out was that it allowed for custom pies, free trades, partial shares, and autoinvesting. These are features
 
 This blog post is about [M1 Finance Invest](https://www.m1finance.com/how-it-works/invest/). There are other services from M1 such as [Borrow](https://www.m1finance.com/how-it-works/borrow/) and [Spend](https://www.m1finance.com/how-it-works/spend/). But I have no plans or interest to use them. 
 
@@ -142,6 +142,6 @@ If you liked my blog post and want to open and M1 Finance account, please use th
 
 <a style="text-decoration: none;" class="btn btn-secondary" href="https://mbsy.co/wzGMJ" role="button">Open an M1 account</a>
 
-Referral: [https://mbsy.co/wzGMJ](https://mbsy.co/wzGMJ)
+Referral: [https://m1.finance/WVxtGBcwdF5g](https://m1.finance/WVxtGBcwdF5g)
 
 Be sure to sign up on the website through the link above.
