Fixed incorrect thumbnail image.

--- a/content/posts/2018-04-11-c2e2.md
+++ b/content/posts/2018-04-11-c2e2.md
@@ -11,8 +11,7 @@ tags:
   - Chicago
   - Comic Con
   - Cosplay
-old_thumbnail: /images/blog/tn_2018-c2e2-entrance.jpg
-thumbnail: /images/blog/tn_default.jpg
+thumbnail: /images/blog/tn_2018-c2e2-entrance.jpg
 title: C2E2 2018
 ---
 
